--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,12 @@
+machine:
+  php:
+    version: 5.6.17
+dependencies:
+  override:
+    - cp .env.example .env
+    - composer install --dev --prefer-source --no-interaction
+    - chmod -R 777 storage
+    - php artisan key:generate
 deploy:
   production:
     branch: master
