--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,6 @@
 machine:
+  pre:
+    - sudo apt-get update; USE_PRECOMPILE=true sudo -E circleci-install php 7.1.0
   php:
     version: 7.1.0
 dependencies:
@@ -7,6 +9,9 @@ dependencies:
     - composer install --dev --prefer-source --no-interaction
     - chmod -R 777 storage
     - php artisan key:generate
+test:
+  override:
+    - php --version
 deploy:
   production:
     branch: master
