--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,11 @@
-# machine:
-#   pre:
-#     - sudo apt-get update; USE_PRECOMPILE=true sudo -E circleci-install php 7.1.0
-#   php:
-#     version: 7.1.0
-# dependencies:
-#   override:
+machine:
+  pre:
+    - sudo apt-get update; USE_PRECOMPILE=true sudo -E circleci-install php 7.1.0
+  php:
+    version: 7.1.0
+dependencies:
+  override:
+    - cp .env.example .env
 #     - cp .env.example .env
 #     - composer install --dev --prefer-source --no-interaction
 #     - chmod -R 777 storage
