--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ machine:
 dependencies:
   override:
     - echo "done"
-    # - cp .env.circleci .env
+    # - cp .env.example .env
     # - composer install --dev --prefer-source --no-interaction
     # - chmod -R 777 storage
     # - php artisan key:generate
